# advanced_algorithms_project

./: .gitignore  AA_project.pptx  CMakeLists.txt  LICENSE  Makefile  README.md  backup.ipynb  example_tarjan.cpp  generate_graph.cpp  generate_graph.sh  include_and_types.cpp  main.cpp  main_nuutila.cpp  main_pearce.cpp  main_pearce_not_recursive.cpp  main_tarjan.cpp  main_transitive_closure.cpp  massif.out.26563  memory.ipynb  my_nuutila.cpp  my_pearce.cpp  my_pearce_not_recursive.cpp  my_tarjan.cpp  my_transitive_closure.cpp  profile.txt  read_peaks.py  read_peaks.sh  res.csv  res.txt  show.py  test2.txt  test_from_stdin.cpp  test_tc.sh  time.csv  time.txt  time_analysis.ipynb  time_first_try.csv  time_optimized.txt  time_optimized_0_100.csv  time_optimized_0_1000.csv  (+16 more)
cartella_dati/: massif.out.nuutila_1000_970  massif.out.nuutila_1000_9958  massif.out.nuutila_250_110  massif.out.nuutila_250_20629  massif.out.nuutila_250_431  massif.out.nuutila_5000_5997  massif.out.nuutila_500_2491  massif.out.nuutila_500_790  massif.out.nuutila_750_1000  massif.out.nuutila_750_400  massif.out.nuutila_750_91796  massif.out.nuutila_8000_39982  massif.out.pearce_1000_58336  massif.out.pearce_1000_5984  massif.out.pearce_1000_970  massif.out.pearce_1000_9958  massif.out.pearce_250_11357  massif.out.pearce_250_20629  massif.out.pearce_250_28183  massif.out.pearce_250_431  massif.out.pearce_5000_2999  massif.out.pearce_5000_5997  massif.out.pearce_5000_9996  massif.out.pearce_500_23782  massif.out.pearce_500_2491  massif.out.pearce_500_409  massif.out.pearce_750_1000  massif.out.pearce_750_1999  massif.out.pearce_750_400  massif.out.pearce_8000_20023  massif.out.pearce_8000_4031  massif.out.pearce_8000_7999  massif.out.tarjan_10000_4999  massif.out.tarjan_1000_3991  massif.out.tarjan_1000_58336  massif.out.tarjan_250_11357  massif.out.tarjan_250_20629  massif.out.tarjan_250_28183  massif.out.tarjan_250_431  (+10 more)
g0_50/: 10_0.011111_1.xml  (+26075 more)
(+38614 files in other folders)
